language-server/src/tests/snapshots/gleam_language_server__tests__rename__change_directory_of_file.snap
---
source: language-server/src/tests/rename.rs
expression: "\nimport wobble.{Wibble}\n\npub fn main() -> wobble.Wibble {\n  assert wobble.wibble == Wibble\n  wobble.Wobble\n}\n"
---
----- BEFORE RENAME
-- wobble.gleam

pub type Wibble {
  Wibble
  Wobble
}

pub const wibble = Wibble


-- app.gleam

import wobble.{Wibble}

pub fn main() -> wobble.Wibble {
  assert wobble.wibble == Wibble
  wobble.Wobble
}


----- AFTER RENAME
-- wibble/wobble.gleam

pub type Wibble {
  Wibble
  Wobble
}

pub const wibble = Wibble


-- app.gleam

import wibble/wobble.{Wibble}

pub fn main() -> wobble.Wibble {
  assert wobble.wibble == Wibble
  wobble.Wobble
}
