language-server/src/tests/snapshots/gleam_language_server__tests__rename__invalid_type_variable_name.snap
---
source: language-server/src/tests/rename.rs
expression: "\npub type Option(anything) {\n  Some(anything)\n  None\n}\n"
---
Error response message:

SomeType is not a valid name
