language-server/src/tests/snapshots/gleam_language_server__tests__rename__no_rename_constant_with_invalid_name.snap
---
source: language-server/src/tests/rename.rs
expression: "\nconst value = 10\n"
---
Error response message:

Ten is not a valid name
