language-server/src/tests/snapshots/gleam_language_server__tests__rename__no_rename_invalid_name.snap
---
source: language-server/src/tests/rename.rs
expression: "\npub fn main() {\n  let wibble = 10\n  wibble\n}\n"
---
Error response message:

Not_AValid_Name is not a valid name
