language-server/src/tests/snapshots/gleam_language_server__tests__rename__no_rename_type_variant_with_invalid_name.snap
---
source: language-server/src/tests/rename.rs
expression: "\npub type Wibble {\n  Constructor(Int)\n}\n"
---
Error response message:

name_in_snake_case is not a valid name
