language-server/src/tests/snapshots/gleam_language_server__tests__rename__no_rename_type_with_invalid_name.snap
---
source: language-server/src/tests/rename.rs
expression: "\ntype Wibble { Wobble }\n"
---
Error response message:

a_type_name is not a valid name
