language-server/src/tests/snapshots/gleam_language_server__tests__rename__reanem_module_from_import_with_unqualified_values.snap
---
source: language-server/src/tests/rename.rs
expression: "import   option   .   {    Some, None }"
---
----- BEFORE RENAME
-- option.gleam
pub type Option(a) { Some(a) None }

-- app.gleam
import   option   .   {    Some, None }
         ↑▔▔▔▔▔                        


----- AFTER RENAME
-- option.gleam
pub type Option(a) { Some(a) None }

-- app.gleam
import   option   .   {    Some, None } as opt
