language-server/src/tests/snapshots/gleam_language_server__tests__rename__rename_aliased_constant.snap
---
source: language-server/src/tests/rename.rs
expression: "\npub const something = 10\n\npub fn main() {\n  something + { 4 * something }\n}\n"
---
----- BEFORE RENAME
-- mod.gleam

import app.{something as some_constant}

fn wibble() {
  some_constant
}


-- app.gleam

pub const something = 10
          ↑▔▔▔▔▔▔▔▔     

pub fn main() {
  something + { 4 * something }
}


----- AFTER RENAME
-- mod.gleam

import app.{ten as some_constant}

fn wibble() {
  some_constant
}


-- app.gleam

pub const ten = 10

pub fn main() {
  ten + { 4 * ten }
}
